--- a/storedata.html
+++ b/storedata.html
@@ -28,7 +28,7 @@
 
                 </table>
                 
-                <button><a href="registration2.html">Back to registration page!!</a></button> 
+                <button><a href="index.html">Back to registration page!!</a></button> 
     </center>
        
      <script>
